<resources>
    <string name="app_name">Desafio4AppGas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_lista_produtos">Produtos</string>
    <string name="menu_lista_pedidos">Pedidos</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="btnlogin">Login</string>
    <string name="btnCadastrarUsuario">Cadastra-se</string>
    <string name="listar">Listar Objetos nessa Tela</string>
    <string name="cadastrar">Cadastrar Objetos nessa Tela</string>
    <string name="editar">Editar Objeto nessa Tela</string>
    <string name="btnEditar">Editar</string>
    <string name="btnExcluir">Deletar</string>
    <string name="btnCadastrar">Cadastrar</string>
    <string name="ok">Ok</string>
    <string name="cancelar">Cancelar</string>
    <string name="nome">Nome</string>
    <string name="cpf">Cpf</string>
    <string name="dtNasc">Data de nascimento</string>
    <string name="endereco">Endereço</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="btnCadPedido">Finalizar pedido</string>
    <string name="pagamento">Pagamento</string>
    <string name="quantidade">Quantidade</string>

    <string-array name="itensSpinner">
        <item>Credido</item>
        <item>Débito</item>
    </string-array>
</resources>