<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FragmentCadPedido">

    <!-- TODO: Update blank fragment layout -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtPagamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pagamento"
                android:inputType="textImeMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtQuantidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/quantidade"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCadPedido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/btnCadPedido" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>