<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroUsuarioActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin"
        android:orientation="vertical">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:boxBackgroundColor="@null"
            app:counterEnabled="true"
            app:counterMaxLength="60">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nome"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:boxBackgroundColor="@null"
            app:counterEnabled="true"
            app:counterMaxLength="60">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtCpf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cpf"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:boxBackgroundColor="@null"
            app:counterEnabled="true"
            app:counterMaxLength="60">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            app:boxBackgroundColor="@null"
            app:counterEnabled="true"
            app:counterMaxLength="60">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtSenha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutEndereco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:maxLength="100"
            app:boxBackgroundColor="@null">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtEnd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/endereco"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnCadastrar" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>